# pigimbal

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: quick_start.py  track_color.py  web_control.py
pigimbal/: __init__.py  camera.py  detector.py  gimbal.py  servo.py  stream.py  tracker.py
tests/: test_all.py
